--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
         <head> <title>Xnero13id Feat MyFanyCans</title> 
             <link rel="icon" type="image/jpg" href="https://i.ibb.co/CB6vhrh/gftyf.jpg" "> 
             <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet"> 
-            <meta property="og:image" content="https://pomf.davebay.net/files/8rjkp2mv.jpg" />
+            <meta property="og:image" content="https://pomf.davebay.net/files/8rjkp2mv.jpg"/>
             <meta property="og:image:secure_url" content="https://pomf.davebay.net/files/8rjkp2mv.jpg" />
-            <meta content="hacked by by ersonXgans ft jesikaXcans04" name="keyword"/> 
-            <meta content="#LOVE YOU JESS:V" name="description"/> <style type="text/css"> 
-            body { background-color: black; background-size: 100%; } 
+            <meta content="Hacked By Readone Negativ" name="keyword"/>
+            body { background-color: black; background url: https://i.ibb.co/CB6vhrh/gftyf.jpg background-size: warp; } 
             h1 { font-size: 67px; font-style: bold; -webkit-animation-name: blinker; -webkit-animation-duration: 2s; -webkit-animation-timing-function: linear; -webkit-animation-iteration-count: infinite; -moz-animation-name: blinker; -moz-animation-duration: 2s; -moz-animation-timing-function: linear; -moz-animation-iteration-count: infinite; animation-name: blinker; animation-duration: 2s; animation-timing-function: linear; animation-iteration-count: infinite; color: white; } @-moz-keyframes blinker { 0% { opacity: 5.0; } 50% { opacity: 0.0; } 100% { opacity: 5.0; } } @-webkit-keyframes blinker { 0% { opacity: 5.0; } 50% { opacity: 0.0;; } 100% { opacity: 5.0; } } h2 { font-size: 35px; font-style: italic; font-family: 'Patrick Hand', cursive; color: gray; } h3 { color: red; font-size: 30px; font-style: italic; } h4 { font-size: 30px; font-style: italic; } h5 { color: white; font-size: 13px; font-style: bold; } div { color: pink; } 
               </style> 
           </script> 
