--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
     <!DOCTYPE HTML><html lang="en"> 
-        <head> <title>Xnero13id Feat MyFanyCans</title> 
-            <link rel="icon" type="image/jpg" href="https://i.ibb.co/CB6vhrh/gftyf.jpg" "> 
+        <head> 
+            <title> Readone Negativ Feat MyFanyCans</title> 
+            <link rel="icon" type="image/jpg" href="https://i.ibb.co/CB6vhrh/gftyf.jpg"> 
             <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet"> 
             <meta property="og:image" content="https://pomf.davebay.net/files/8rjkp2mv.jpg"/>
             <meta property="og:image:secure_url" content="https://pomf.davebay.net/files/8rjkp2mv.jpg" />
             <meta content="Hacked By Readone Negativ" name="keyword"/>
-            body { background-color: black; background url: https://i.ibb.co/CB6vhrh/gftyf.jpg background-size: warp; } 
+            body { background: url(https://i.ibb.co/CB6vhrh/gftyf.jpg); 
+background-size: cover; } 
             h1 { font-size: 67px; font-style: bold; -webkit-animation-name: blinker; -webkit-animation-duration: 2s; -webkit-animation-timing-function: linear; -webkit-animation-iteration-count: infinite; -moz-animation-name: blinker; -moz-animation-duration: 2s; -moz-animation-timing-function: linear; -moz-animation-iteration-count: infinite; animation-name: blinker; animation-duration: 2s; animation-timing-function: linear; animation-iteration-count: infinite; color: white; } @-moz-keyframes blinker { 0% { opacity: 5.0; } 50% { opacity: 0.0; } 100% { opacity: 5.0; } } @-webkit-keyframes blinker { 0% { opacity: 5.0; } 50% { opacity: 0.0;; } 100% { opacity: 5.0; } } h2 { font-size: 35px; font-style: italic; font-family: 'Patrick Hand', cursive; color: gray; } h3 { color: red; font-size: 30px; font-style: italic; } h4 { font-size: 30px; font-style: italic; } h5 { color: white; font-size: 13px; font-style: bold; } div { color: pink; } 
               </style> 
           </script> 
@@ -15,7 +17,7 @@
               </img>
               </center> 
               <center> 
-                <h1><font face="Patrick Hand" color="white">ersonXgans04 ft jesikaXcans<font color="red">04<font>
+                <h1><font face="Patrick Hand" color="white"> Readone Negativ Feat <font color="MyFanyCans"<font>
                            </font>
                  </h1>
                     </center> 
@@ -23,7 +25,11 @@
                        </h2>
                         </center> 
                     <center>
-                  <h2>"tetaplah bersama ku walaupun keadaan suka mau pun duka #loveyoujess"
+                  <h2>Lekas Sembuh Dan Membaik <br>
+                      jangan Menyebalkan Dan Ingat Untuk Makan<br>
+                      Obat Diminum Dan Istirahat yang cukupyah :D <br>
+                      
+                      TTD READONE
                                              </h2>
                             </center> 
                       </center> 
