--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
             <meta property="og:image" content="https://pomf.davebay.net/files/8rjkp2mv.jpg"/>
             <meta property="og:image:secure_url" content="https://pomf.davebay.net/files/8rjkp2mv.jpg" />
             <meta content="Hacked By Readone Negativ" name="keyword"/>
-            body { background: url(https://i.ibb.co/CB6vhrh/gftyf.jpg); 
-background-size: cover; } 
+            body { margin: 0; padding: 0; background: url(https://i.ibb.co/CB6vhrh/gftyf.jpg); 
+background-size: cover; font-family: 'Lato', sans-serif; } div { position: fixed; top: 35%; left: 50%; transform: translate(-50%,-50%) skewY(-5deg); border: 4px solid #fff; padding: 20px 50px; border-radius: 10px; box-shadow: 0 0 10px purple, 0 0 30px purple, inset 0 0 10px purple, inset 0 0 30px purple; animation: animate .1s linear infinite; } 
+div:before { content: ''; position: fixed; bottom: 15px; left: 0; width: 100%; height: 4px; background: #fff; box-shadow: 0 0 10px purple, 0 0 30px purple; z-index: -1; } 
+div:after { content: ''; position: fixed; top: 15px; left: 0; width: 100%; height: 4px; background: #fff; box-shadow: 0 0 10px purple, 0 0 30px purple; z-index: -1; } 
+h1 span:nth-child(10) { animation-delay: .10s; } h2 { margin: 0; padding: 0; font-size: 2em; color: #fff; transform: translate(-50%,-50%) skewY(-5deg); text-shadow: 0 0 10px darkblue, 0 0 20px darkblue, 0 0 80px darkblue, 0 0 120px darkblue; position: absolute; top: 55%; left: 50%; } 
+h3 { margin: 0; padding: 0; font-size: 2em; color: #fff; transform: translate(-50%,-50%) skewY(-5deg); text-shadow: 0 0 10px blue, 0 0 20px blue, 0 0 80px blue, 0 0 120px blue; position: fixed; bottom:30%; left: 50%; } 
+@keyframes animate { 0% { opacity: 1; } 30% { opacity: 1; } 40% { opacity: .5; } 50% { opacity: 1; } 100% { opacity: 1; } } @keyframes animate { 0% { opacity: 1; } 30% { opacity: 1; } 40% { opacity: .5; } 50% { opacity: 1; } 100% { opacity: 1; } } 
+<script src='http://wadah-tutorial.googlecode.com/files/hearts.js' type='text/javascript'/>
             h1 { font-size: 67px; font-style: bold; -webkit-animation-name: blinker; -webkit-animation-duration: 2s; -webkit-animation-timing-function: linear; -webkit-animation-iteration-count: infinite; -moz-animation-name: blinker; -moz-animation-duration: 2s; -moz-animation-timing-function: linear; -moz-animation-iteration-count: infinite; animation-name: blinker; animation-duration: 2s; animation-timing-function: linear; animation-iteration-count: infinite; color: white; } @-moz-keyframes blinker { 0% { opacity: 5.0; } 50% { opacity: 0.0; } 100% { opacity: 5.0; } } @-webkit-keyframes blinker { 0% { opacity: 5.0; } 50% { opacity: 0.0;; } 100% { opacity: 5.0; } } h2 { font-size: 35px; font-style: italic; font-family: 'Patrick Hand', cursive; color: gray; } h3 { color: red; font-size: 30px; font-style: italic; } h4 { font-size: 30px; font-style: italic; } h5 { color: white; font-size: 13px; font-style: bold; } div { color: pink; } 
               </style> 
           </script> 
