--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             <meta property="og:image" content="https://pomf.davebay.net/files/8rjkp2mv.jpg"/>
             <meta property="og:image:secure_url" content="https://pomf.davebay.net/files/8rjkp2mv.jpg" />
             <meta content="Hacked By Readone Negativ" name="keyword"/>
+            <center> <script type="text/javascript" src="http://naughtyric.googlecode.com/files/jrRain.js"></script>
+<style> 
+@import url('https://fonts.googleapis.com/css?family=Lato:100'); 
             Body { margin: 0; padding: 0; 
 background: url(https://i.ibb.co/2WtRY7k/L.jpg); 
 background-size: cover; font-family: 'Lato', sans-serif; } div { position: fixed; top: 35%; left: 50%; transform: translate(-50%,-50%) skewY(-5deg); border: 4px solid #fff; padding: 20px 50px; border-radius: 10px; box-shadow: 0 0 10px purple, 0 0 30px purple, inset 0 0 10px purple, inset 0 0 30px purple; animation: animate .1s linear infinite; } 
