--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
     <!DOCTYPE HTML><html lang="en"> 
-        <head> 
-            <title> Readone Negativ Feat MyFanyCans</title> 
-            <link rel="icon" type="image/jpg" href="https://i.ibb.co/CB6vhrh/gftyf.jpg"> 
-            <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet"> 
-            <meta property="og:image" content="https://pomf.davebay.net/files/8rjkp2mv.jpg"/>
-            <meta property="og:image:secure_url" content="https://pomf.davebay.net/files/8rjkp2mv.jpg" />
-            <meta content="Hacked By Readone Negativ" name="keyword"/>
-            <center> <script type="text/javascript" src="http://naughtyric.googlecode.com/files/jrRain.js"></script>
+<head> 
+<html lang="en-US">
+<head>
+<title>Xnero13-id Feat XFanyCans</title> 
+<meta property="og:title" content="Hacked By Readone Negativ"> 
+<meta property="og:description" content="Lekas Membaik"> 
+<meta property="og:image" content="https://i.ibb.co/CB6vhrh/gftyf.jpg" "=""> 
+<meta property="og:author" content="ReadOne For MyFanyCans">
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">                                                          
+<meta charset="utf-8"> 
+<center> <script type="text/javascript" src="http://naughtyric.googlecode.com/files/jrRain.js"></script>
 <style> 
 @import url('https://fonts.googleapis.com/css?family=Lato:100'); 
-            Body { margin: 0; padding: 0; 
-background: url(https://i.ibb.co/2WtRY7k/L.jpg); 
+body { margin: 0; padding: 0; 
+background: url(https://i.ibb.co/CB6vhrh/gftyf.jpg); 
 background-size: cover; font-family: 'Lato', sans-serif; } div { position: fixed; top: 35%; left: 50%; transform: translate(-50%,-50%) skewY(-5deg); border: 4px solid #fff; padding: 20px 50px; border-radius: 10px; box-shadow: 0 0 10px purple, 0 0 30px purple, inset 0 0 10px purple, inset 0 0 30px purple; animation: animate .1s linear infinite; } 
 div:before { content: ''; position: fixed; bottom: 15px; left: 0; width: 100%; height: 4px; background: #fff; box-shadow: 0 0 10px purple, 0 0 30px purple; z-index: -1; } 
 div:after { content: ''; position: fixed; top: 15px; left: 0; width: 100%; height: 4px; background: #fff; box-shadow: 0 0 10px purple, 0 0 30px purple; z-index: -1; } 
@@ -24,32 +27,25 @@ h1 span:nth-child(10) { animation-delay: .10s; } h2 { margin: 0; padding: 0; fon
 h3 { margin: 0; padding: 0; font-size: 2em; color: #fff; transform: translate(-50%,-50%) skewY(-5deg); text-shadow: 0 0 10px blue, 0 0 20px blue, 0 0 80px blue, 0 0 120px blue; position: fixed; bottom:30%; left: 50%; } 
 @keyframes animate { 0% { opacity: 1; } 30% { opacity: 1; } 40% { opacity: .5; } 50% { opacity: 1; } 100% { opacity: 1; } } @keyframes animate { 0% { opacity: 1; } 30% { opacity: 1; } 40% { opacity: .5; } 50% { opacity: 1; } 100% { opacity: 1; } } 
 <script src='http://wadah-tutorial.googlecode.com/files/hearts.js' type='text/javascript'/>
-            </style> 
-          </script> 
-             </head> 
-             <script src="https://cdn.rawgit.com/bungfrangki/efeksalju/2a7805c7/efek-salju.js" type="text/javascript"></script> 
-             <body> <br> <br> <br> <br>
-              </img>
-              </center> 
-              <center> 
-                <h1><font face="Patrick Hand" color="white"> Readone Negativ Feat <font color="MyFanyCans"<font>
-                           </font>
-                 </h1>
-                    </center> 
-                   <center><h2>masege:
-                       </h2>
-                        </center> 
-                    <center>
-                  <h2>Lekas Sembuh Dan Membaik <br>
-                      jangan Menyebalkan Dan Ingat Untuk Makan<br>
-                      Obat Diminum Dan Istirahat yang cukupyah :D <br>
+</style>
+</head> 
+<body><br><br>
+<center>
+<font face="Patrick Hand" color="white"> Readone Negativ Feat <font color="MyFanyCans"<font>
+</font>                                                                                     
+Lekas Sembuh Dan Membaik <br>
+jangan Menyebalkan Dan Ingat Untuk Makan<br>
+Obat Diminum Dan Istirahat yang cukupyah :D <br>
                       
-                      TTD READONE
-                                             </h2>
-                            </center> 
-                      </center> 
-                       <center>
-                       <audio autoplay="autoplay" controls="controls" src="https://l.top4top.io/m_1767crdl20.mp3" type="audio/mpeg"></audio><head>
-                         </center> 
-                          </body> 
-                               </html>
+ TTD READONE
+                                           
+  </center> 
+  <center>
+    <audio autoplay="autoplay" controls="controls" src="https://l.top4top.io/m_1767crdl20.mp3" type="audio/mpeg"></audio><head>
+         </center> 
+          </body> 
+              </html>                                                                       
+</iframe> </html>
+
+
+
