--- a/index.html
+++ b/index.html
@@ -120,11 +120,12 @@
 	<div class="bg">
 
 	<div class="box">
-	<h1><b><font color="white">ReadOne</font> For <font color="white"> MyFanyCans</font></b></h1><br>
+	<h1><b>
+		<font color="white">ReadOne</font> For <font color="white"> MyFanyCans</font></b></h1><br>
 		<div class="mek">
-    		<br><br><h2>" Message : " <br> Lekas Sembuh Dan Membaik <br>
+    		<br><br><h2>" Message : <br> Lekas Sembuh Dan Membaik <br>
 jangan Menyebalkan Dan Ingat Untuk Makan <br>
-Obat Diminum Dan Istirahat yang cukup
+Obat Diminum Dan Istirahat yang cukup <br>
                                      </h2><br><h4>so don't argue i love you</h4><br></b>
                                      <b><i></i></b><hr></div>
 <audio autoplay="autoplay" controls="controls" src="https://l.top4top.io/m_1767crdl20.mp3" type="audio/mpeg"></audio><head>
