--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	 <head>
 	 <meta charset="utf-8">
 	 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-	 <title>AAF EXPLOITER |•| Team</title>
-	 <title>Xnero13-id Feat XFanyCans</title> 
+	 <title> Xnero13-id Feat XFanyCans </title> 
 <meta property="og:title" content="Hacked By Readone Negativ"> 
 <meta property="og:description" content="Lekas Membaik"> 
 <meta property="og:image" content="https://i.ibb.co/CB6vhrh/gftyf.jpg"> 
@@ -123,11 +122,11 @@
 	<h1><b>
 		<font color="white">ReadOne</font> For <font color="white"> MyFanyCans</font></b></h1><br>
 		<div class="mek">
-    		<br><br><h2>" Message : <br> Lekas Sembuh Dan Membaik <br>
+    		<br><br><h2>" Message : <br> Lekas Sembuh Dan Cepat-Cepat Membaik <br>
 jangan Menyebalkan Dan Ingat Untuk Makan <br>
-Obat Diminum Dan Istirahat yang cukup <br>
-                                     </h2><br><h4>so don't argue i love you</h4><br></b>
-                                     <b><i></i></b><hr></div>
+Obat Diminum ! Dan Istirahat yang cukup <br>
+   </h2><br><h4>so don't argue i love you</h4><br></b>
+      <b><i></i></b><hr></div>
 <audio autoplay="autoplay" controls="controls" src="https://l.top4top.io/m_1767crdl20.mp3" type="audio/mpeg"></audio><head>
    
 	
