--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	 <meta charset="utf-8">
 	 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 	 <title> Xnero13-id Feat XFanyCans </title> 
-<meta property="og:title" content="Hacked By Readone Negativ"> 
+<meta property="og:title" content="Hacked By Readone Negativ For MyFanyCans"> 
 <meta property="og:description" content="Lekas Membaik"> 
 <meta property="og:image" content="https://i.ibb.co/CB6vhrh/gftyf.jpg"> 
 <meta property="og:author" content="ReadOne For MyFanyCans">
